## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = libchez-a-sync-0.la

libchez_a_sync_0_la_SOURCES = poll.cpp pipe.cpp errno.cpp unix_write.cpp

AM_CXXFLAGS = -D_XOPEN_SOURCE=600 -I..

libchez_a_sync_0_la_LIBADD =

libchez_a_sync_0_la_LDFLAGS = -version-info @CHEZ_A_SYNC_SO_VERSION@
